external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_empty_match_2.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03013]: positional call mismatch
  ┌─ tests/move_2024/matching/invalid_empty_match_2.move:9:13
  │
4 │         None
  │         ---- 'None' is declared here
  ·
9 │             Empty::None() => ()
  │             ^^^^^^^^^^^^^ Invalid variant pattern. Empty variant declarations require empty patterns
  │
  = Remove '()' arguments from this pattern
